--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class ="banner"><div class="container">
+
+  <h1>  Bienvenue sur <strong> Easy car</strong> </h1>
+  <h2> <strong>Location de voiture</strong></h2>
+
+  <%= link_to "Découvrez nos voitures", voitures_path, :class => "btn btn-primary" %>
+  
+</div>
+
+</div>
